Encoded Message to UTF-8 and Permission Forbidden ErrorHandling

--- a/notebook/notebook_summary.ipynb
+++ b/notebook/notebook_summary.ipynb
@@ -14,7 +14,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.svm import LinearSVC\n",
+    "from sklearn.svm import LinearSVC, SVC\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.linear_model import SGDClassifier\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
